# botkin

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ops/: Dockerfile
ops/ci/: README.md
ops/deploy/: README.md
src/botkin/api/: app.py
study/ch04_gpt/: gpt.py
study/ch05_pretraining/: gpt_generate.py  gpt_train.py
study/ch06_finetune_cls/: gpt_class_finetune.py
study/ch07_finetune_instructions/: gpt_instruction_finetuning.py
tests/: test_smoke.py
