[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botkin"
version = "0.1.0"
description = "LLM-from-scratch experiments promoted into a small package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "ipykernel",
  "jupyter",
  "tqdm",
  "numpy",
  "pandas",
  "matplotlib",
  "fastapi",
  "uvicorn[standard]"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
